--- a/css/style.css
+++ b/css/style.css
@@ -108,15 +108,23 @@ body {
 }
 
 .header-contacts-item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .header .contacts-link {
+  display: inline-flex;
+  align-items: center;
   padding: 32px 0;
   font-weight: 500;
   line-height: calc(16 / 14);
   letter-spacing: 0.02em;
 }
+
+.icon-contact{
+  fill: currentColor;
+  margin-right: 10px;
+}
+
 
 /* *_____________________________ Header _____________________________*/
 
@@ -166,6 +174,10 @@ body {
 /* *_____________________________ Big hero _____________________________*/
 
 /* *_____________________________ Our advantages _____________________________*/
+
+.advantage-icon{
+  margin: 25px 100px 50px;
+}
 
 .advantages-item-title {
   font-weight: 700;
