--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
     url(../images/home/hero-bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 
 .hero-title {
@@ -373,8 +373,8 @@ body {
   margin-top: var(--card-gap);
 }
 
-.product-list-item:hover,
-.product-list-item:focus {
+.product-list-link:hover,
+.product-list-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
